2005-04-18  Pawel Salek

	* libbalsa/imap/imap-handle.c: silence output on the terminal.
	* src/balsa-icons.c: silence icon debugging.
	* src/sendmsg-window.c: specify exactly file names in messages -
	important when attaching multiple messages at once.

2005-04-17 10:57  PeterB

	* libbalsa/: mailbox.c, mailbox.h, mailbox_local.c: don't keep
	selected message displayed when changing view filter.

2005-04-16 22:37  PeterB

	* src/save-restore.c, libbalsa/identity.c: compile with gpgme but
	without libesmtp.
	* src/pref-manager.c: append server to balsa_app.smtp_servers when
	the user OKs it.

2005-04-16 20:23  Pawel Salek

	* libbalsa/identity.[ch]: compile --without-gpgme
	* libbalsa/imap/imap-handle.c: survive better broken connections.
	* src/mailbox-conf.c: generate shorter identity names.
	* src/save-restore.c: more robust smtp server config loading.

2005-04-16 08:01  PeterB

	* libbalsa/i18n.h: comment that this header must be included last.
	* libbalsa/smtp-server.c: include "i18n.h" last.

2005-04-15 17:28  PeterB

	* libbalsa/Makefile.am, libbalsa/identity.c, libbalsa/identity.h,
	libbalsa/libbalsa.h, libbalsa/message.c, libbalsa/send.c,
	libbalsa/send.h, libbalsa/server.h, libbalsa/smtp-server.c,
	libbalsa/smtp-server.h, libinit_balsa/balsa-druid-page-user.c,
	src/balsa-app.c, src/balsa-app.h, src/balsa-message.c,
	src/main-window.c, src/pref-manager.c, src/save-restore.c,
	src/sendmsg-window.c: implement LibBalsaSmtpServer; use it for
	per-identity server.

2005-04-12 12:31  PeterB

	* libbalsa/html.c: convert charset more carefully.

2005-04-10 20:28  PeterB

	* libbalsa/mailbox_maildir.c: do not overwrite message when
	renaming.
	* libbalsa/mailbox_maildir.c: remember correct file name.

2005-04-08 14:30  PeterB

	* src/save-restore.c: use correct filter group name; remove filter
	groups with malformed names.

2005-04-07 Albrecht Dreß <albrecht dot dress at arcor dot de>

	* src/balsa-message.c: save multiple parts.

2005-04-07 11:18  PeterB
